--- a/.gitignore
+++ b/.gitignore
@@ -58,9 +58,8 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-# Need sqllite
-# db.sqlite3
-# db.sqlite3-journal
+db.sqlite3
+db.sqlite3-journal
 
 # Flask stuff:
 instance/
