--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 altair==4.2.2
 attrs==23.1.0
+azure-common==1.1.28
+azure-core==1.27.0
+azure-identity==1.13.0
+azure-keyvault-secrets==4.7.0
 blinker==1.6.2
 cachetools==5.3.1
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
+cryptography==41.0.1
 decorator==5.1.1
 deta==1.1.0
 entrypoints==0.4
@@ -12,20 +18,26 @@ gitdb==4.0.10
 GitPython==3.1.31
 idna==3.4
 importlib-metadata==6.6.0
+isodate==0.6.1
 Jinja2==3.1.2
 jsonschema==4.17.3
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 mdurl==0.1.2
+msal==1.22.0
+msal-extensions==1.0.0
 numpy==1.24.3
 packaging==23.1
 pandas==2.0.2
 Pillow==9.5.0
 plotly==5.14.1
+portalocker==2.7.0
 protobuf==3.20.3
 pyarrow==12.0.0
+pycparser==2.21
 pydeck==0.8.1b0
 Pygments==2.15.1
+PyJWT==2.7.0
 Pympler==1.0.1
 pyrsistent==0.19.3
 python-dateutil==2.8.2
